@@ -44,6 +44,9 @@ if( Fortran_COMPILER_NAME MATCHES "gfortran" )
   if( WANT_WARNINGS )
     set( WARN_FLAGS "-Wall -Wextra" )
   endif( WANT_WARNINGS )
+  if( STOP_ON_WARNING )
+    set( WARN_FLAGS "${WARN_FLAGS} -Werror" )
+  endif( STOP_ON_WARNING )
   
   if( WANT_LIBRARY )
     set( LIB_FLAGS "-fPIC -g" )
@@ -73,6 +76,9 @@ elseif( Fortran_COMPILER_NAME MATCHES "g95" )
     set( WARN_FLAGS "-Wall -Wextra -Werror -Wno=102,136,165" )
     set( WARN_FLAGS "-std=f2003 ${WARN_FLAGS}" )
   endif( WANT_WARNINGS )
+  if( STOP_ON_WARNING )
+    set( WARN_FLAGS "${WARN_FLAGS} -Werror" )
+  endif( STOP_ON_WARNING )
   
   if( WANT_LIBRARY )
     set( LIB_FLAGS "-fPIC -g" )
