@@ -4,6 +4,7 @@ option( CMAKE_VERBOSE_MAKEFILE "Verbose makefile" off )
 
 option( WANT_CHECKS       "Activate runtime checks (array bounds, NaNs)" off )
 option( WANT_WARNINGS     "Activate warnings" on )
+option( STOP_ON_WARNING   "Stop compilation on warnings" off )
 option( WANT_OPENMP       "Use OpenMP parallelisation (experimental)" off )
 option( WANT_SSE42        "Enable generation of SSE4.2 code" off )
 option( WANT_HOST_OPT     "Enable host-specific optimisation. Choose only when compiling and running on the same machine! Overrides WANT_SSE42" off )
